--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -7,16 +7,18 @@
 .title_page1 {
   text-align: center;
   color: #245fdf;
-  padding-top: 130px;
+  padding-top: 132px;
+  /* padding에 따라 div 크기도 달라짐 */
   font-size: 60px;
   font-weight: bold;
+  line-height: 140%;
 }
 
 .subtitle_page1 {
   text-align: center;
   color: #245fdf;
-  margin-top: 32px;
-  margin-bottom: 25px;
+  margin-top: 44px;
+  margin-bottom: 34px;
   padding: 0;
   font-size: 27px;
 }
@@ -28,9 +30,10 @@
   background: white;
   border: 1px solid #ccc;
   border-radius: 40px;
-  padding: 9px 10px;
+  padding: 4px 10px;
   padding-right: 2px;
   width: 670px;
+  height: 66px;
   margin: 0 auto;
 }
 
@@ -44,16 +47,17 @@
   background-color: #245fdf;
   border: none;
   color: white;
-  margin-left: 2px;
   padding: 5px 10px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 0px 4px;
   transition-duration: 0.4s;
   cursor: pointer;
   border-radius: 40px;
+  width: 200px;
+  height: 52px;
 }
 
 .input_group button:hover {
@@ -89,11 +93,22 @@
   line-height: 170%;
 }
 
-.background2 button {
+.interview_button {
   text-align: center;
+  padding-top: 20px;
+}
+
+.interview_button button {
   background-color: #245fdf;
   border: none;
   color: white;
   border-radius: 3px;
   padding: 5px 10px;
 }
+
+.interview_button button:hover {
+  background-color: #007bff;
+}
+
+/* 마진, 패딩 관계 확인 - title은 padding, subtitle은 margin why??
+input 테두리 완벽하게 지우기 */
