feat: 홈 및 인터뷰 생성 style 변경

--- a/src/styles/founder/create-interview.module.css
+++ b/src/styles/founder/create-interview.module.css
@@ -1,29 +1,71 @@
 .BigTitle {
   font-size: 30px;
   font-weight: bold;
-  margin-top: 100px;
+  margin-top: 118px;
+}
+
+.CreateContainer {
   display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 40px;
+}
+
+.UploadContainer {
+  width: 524px;
+  height: 632px;
+  border-radius: 8px;
+  background-color: #f6f6f6;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 40px;
+}
+
+.UploadTextBox {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  margin-top: 170px;
+}
+
+.UploadText {
+  max-width: 310px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 35px;
+  margin-bottom: 10px;
+}
+
+.UploadText2 {
+  font-size: 15px;
+  margin-top: 7px;
+  color: rgb(132, 132, 132);
 }
 
 .InputContainer {
   margin-top: 40px;
   margin-bottom: 100px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  margin-left: 60px;
+  width: 701px;
+  height: 1330px;
+  padding: 45px;
 }
 
 .SubTitle {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  margin-bottom: 10px;
 }
 
 .InputBox {
-  margin: 20px;
+  margin-bottom: 30px;
 }
 
 .Input1 {
-  width: 500px;
+  width: 600px;
   height: 30px;
   outline: none;
   padding: 10px;
@@ -42,8 +84,8 @@
 }
 
 .Input3 {
-  width: 500px;
-  height: 350px;
+  width: 610px;
+  height: 420px;
   margin-top: 7px;
   text-align: left;
 }
@@ -62,6 +104,13 @@
 .Title2 {
   color: rgb(98, 98, 98);
   font-size: 15px;
+  margin-bottom: 10px;
+}
+
+.ButtonContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .CreateButton {
@@ -73,8 +122,7 @@
   font-size: 15px;
   text-align: center;
   padding: 10px;
-  margin-left: 20px;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .CreateButton:hover {
@@ -100,4 +148,8 @@
 .Category1 {
   margin-right: 5px;
   margin-left: 15px;
+}
+
+.BlueText {
+  color: rgb(42, 113, 255);
 }
