--- a/src/styles/founder/founder-home.module.css
+++ b/src/styles/founder/founder-home.module.css
@@ -10,14 +10,19 @@
 .FounderBox {
   display: flex;
   flex-direction: column;
-  width: 900px;
+  width: 1071px;
+  height: 856px;
+  border-radius: 10px;
+  background-color: rgb(244, 244, 244);
+  margin-top: 80px;
+  padding: 20px;
 }
 
 .Title {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
   text-align: center;
 }
@@ -26,13 +31,15 @@
   display: flex;
   margin-top: 10px;
   flex-wrap: wrap;
-  gap: 20px;
+  margin-left: 55px;
+  gap: 40px;
 }
 
 .SubTitle {
   font-size: 21px;
   font-weight: bold;
-  margin-top: 70px;
   margin-bottom: 20px;
+  margin-top: 10px;
+  margin-left: 55px;
   align-self: flex-start;
 }
