--- a/src/styles/interviewee/interviewee-home.module.css
+++ b/src/styles/interviewee/interviewee-home.module.css
@@ -10,12 +10,17 @@
 .IntervieweeBox {
   display: flex;
   flex-direction: column;
-  width: 900px;
+  width: 1070px;
+  height: 1400px;
+  border-radius: 10px;
+  background-color: rgb(244, 244, 244);
+  margin-top: 80px;
+  padding: 25px;
 }
 
 .Title {
   display: flex;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
   text-align: center;
 }
@@ -23,14 +28,16 @@
 .FounderContainer {
   display: flex;
   margin-top: 10px;
+  margin-left: 50px;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 40px;
 }
 
 .SubTitle {
   font-size: 21px;
   font-weight: bold;
-  margin-top: 70px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  margin-left: 50px;
+  margin-top: 15px;
   align-self: flex-start;
 }
