--- a/src/styles/founder/calendar.module.css
+++ b/src/styles/founder/calendar.module.css
@@ -1,3 +1,66 @@
+/*toolbar*/
+.toolbar {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  justify-content: end;
+  margin-bottom: 21px;
+}
+
+.selectBox {
+  height: 32px;
+  border: 1px solid #d9d9d9;
+  border-radius: 6px;
+  color: rgba(0, 0, 0, 0.88);
+  -webkit-appearance: none; /*chrome*/
+  -moz-appearance: none; /*firefox*/
+  appearance: none;
+  padding: 0 12px;
+  cursor: pointer;
+  outline: none;
+}
+
+.checkBox {
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+}
+
+.checkOption {
+  display: flex;
+  height: 32px;
+  align-items: center;
+  padding: 0 16px;
+}
+
+.month {
+  border: 1px solid #d9d9d9;
+  border-radius: 6px 0px 0px 6px;
+  border-right: transparent;
+  color: rgba(0, 0, 0, 0.88);
+}
+
+.clickedMonth {
+  border: 1px solid #1677ff;
+  border-radius: 6px 0px 0px 6px;
+  color: #1677ff;
+}
+
+.year {
+  border: 1px solid #d9d9d9;
+  border-radius: 0px 6px 6px 0px;
+  border-left: transparent;
+  color: rgba(0, 0, 0, 0.88);
+}
+
+.clickedYear {
+  border: 1px solid #1677ff;
+  border-radius: 0px 6px 6px 0px;
+  color: #1677ff;
+}
+
+/*calendar*/
 .Container {
   display: flex;
   width: 100%;
