--- a/src/styles/founder/calendar.module.css
+++ b/src/styles/founder/calendar.module.css
@@ -136,12 +136,13 @@
 
 /*calendar*/
 .container {
-  width: 960px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 93px 0 64px 0;
   gap: 42px;
+  padding: 0 250px;
 }
 
 .title {
@@ -154,5 +155,5 @@
 
 .calendarWrapper {
   height: 655px;
-  width: 100%;
+  width: 960px;
 }
