--- a/src/styles/founder/manage-interviewee.module.css
+++ b/src/styles/founder/manage-interviewee.module.css
@@ -197,3 +197,48 @@
   border: 1px solid #ff4d4f;
   color: #ff4d4f;
 }
+
+/*Modal*/
+.modalContainer {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(25, 25, 25, 0.5);
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modalBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 815px;
+  height: 228px;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+}
+
+.question {
+  text-align: center;
+  margin: 66px 0 24px 0;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 236px;
+  height: 40px;
+  border-radius: 8px;
+  border: none;
+  background-color: #2a4ecd;
+  color: white;
+  box-shadow: 0px 2px 0px 0px rgba(5, 145, 255, 0.1);
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+}
