--- a/src/styles/founder/FounderBox.module.css
+++ b/src/styles/founder/FounderBox.module.css
@@ -1,7 +1,7 @@
 .IntervieweeBoxWrap {
   position: relative;
-  width: 280px;
-  height: 390px;
+  width: 300px;
+  height: 387px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
@@ -15,17 +15,46 @@
 .FounderImg {
   flex: 0 0 auto;
   width: 100%;
-  height: 280px;
-  overflow: hidden;
+  height: 270px;
+  overflow: visible;
   margin-bottom: 10px;
+  position: relative;
 }
 
 .FounderImg img {
   width: 100%;
-  height: 280px;
+  height: 270px;
   object-fit: cover;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.DefaultTime {
+  position: absolute;
+  top: 10px;
+  right: -8px;
+  width: 50px;
+  height: 30px;
+  background-color: #1677ff;
+  color: white;
+  padding-left: 10px;
+  padding-top: 7px;
+  border-radius: 4px 4px 0px 4px;
+  font-size: 14px;
+}
+
+.SmallBox {
+  background-color: #1677ff;
+  width: 8px;
+  height: 6px;
+  position: absolute;
+  top: 40px;
+  right: -8px;
+}
+
+.InfoContainer {
+  margin-top: 10px;
+  margin-left: 13px;
 }
 
 .InfoWrap {
@@ -36,27 +65,46 @@
 }
 
 .SmallFounderImg {
-  width: 30px;
-  height: 30px;
+  width: 32px;
+  height: 32px;
   border-radius: 50%;
 }
 
 .SmallFounderImg img {
-  width: 30px;
-  height: 30px;
+  width: 32px;
+  height: 32px;
   border-radius: 50%;
 }
 
 .FounderName {
   margin-left: 15px;
-  font-size: 15px;
-  font-weight: bold;
+  font-size: 16px;
+  font-weight: 500;
+  display: flex;
+  color: #000000e0;
+  justify-content: space-between;
+}
+
+.ViewCount {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 11.61px;
+  margin-bottom: 2px;
+}
+
+.ViewCount img {
+  width: 18px;
+  height: 18px;
+  margin-left: 55px;
+  margin-right: 8px;
+  margin-bottom: 2px;
 }
 
 .FounderInfo {
   margin-left: 65px;
   margin-top: 5px;
-  max-width: 190px;
+  max-width: 180px;
   font-size: 14px;
   color: #9b9b9b;
 }
