--- a/src/styles/founder/create-interview.module.css
+++ b/src/styles/founder/create-interview.module.css
@@ -2,6 +2,7 @@
   font-size: 30px;
   font-weight: bold;
   margin-top: 118px;
+  margin-left: 10px;
 }
 
 .CreateContainer {
@@ -16,30 +17,9 @@
   height: 632px;
   border-radius: 8px;
   background-color: #f6f6f6;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 12px 0px #00000040;
   margin-top: 40px;
-}
-
-.UploadTextBox {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 170px;
-}
-
-.UploadText {
-  max-width: 310px;
-  text-align: center;
-  font-weight: 600;
-  font-size: 28px;
-  line-height: 35px;
-  margin-bottom: 10px;
-}
-
-.UploadText2 {
-  font-size: 15px;
-  margin-top: 7px;
-  color: rgb(132, 132, 132);
+  margin-left: 10px;
 }
 
 .InputContainer {
@@ -66,17 +46,25 @@
 
 .Input1 {
   width: 600px;
-  height: 30px;
+  height: 35px;
   outline: none;
   padding: 10px;
+  border-color: #c3c3c3;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 8px;
 }
 
 .Input2 {
   width: 90px;
-  height: 30px;
+  height: 35px;
   outline: none;
   padding: 10px;
   text-align: center;
+  border-color: #c3c3c3;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 8px;
 }
 
 .Input2::placeholder {
@@ -114,19 +102,18 @@
 }
 
 .CreateButton {
-  background-color: rgb(42, 113, 255);
+  background-color: #2a4ecd;
   border-radius: 5px;
   color: white;
-  width: 100px;
-  height: 35px;
-  font-size: 15px;
+  width: 136px;
+  height: 43px;
+  font-size: 18px;
   text-align: center;
-  padding: 10px;
-  margin-top: 20px;
+  padding: 10.84px 21.88px 6.84px 21.88px;
 }
 
 .CreateButton:hover {
-  background-color: rgb(0, 85, 255);
+  background-color: #183ab6;
 }
 
 .ErrorMessage {
@@ -151,5 +138,100 @@
 }
 
 .BlueText {
-  color: rgb(42, 113, 255);
+  color: #2a4ecd;
+}
+
+.Temp_postTest {
+  padding-left: 40px;
+}
+
+.Content {
+  padding-left: 40px;
+}
+
+/* ImageUpload.css*/
+.Container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.UploadIcon img {
+  width: 80px;
+  height: 80px;
+  margin-top: 130px;
+  margin-bottom: 15px;
+}
+
+.UploadTextBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.UploadText {
+  max-width: 310px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 35px;
+  margin-bottom: 10px;
+}
+
+.UploadText2 {
+  font-size: 15px;
+  margin-top: 7px;
+  color: rgb(132, 132, 132);
+}
+
+.Button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  height: 55px;
+  font-size: 16px;
+  background-color: none;
+  border-color: #6a6a6a;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 30px;
+  color: black;
+  margin-top: 40px;
+  margin-bottom: 15px;
+}
+
+.Button img {
+  width: 22px;
+  height: 22px;
+  margin-right: 10px;
+}
+
+.Dropzone {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  color: rgb(160, 160, 160);
+  background-color: #f9f9f9;
+}
+
+.PreviewContainer {
+  text-align: center;
+  overflow: hidden;
+}
+
+.Image {
+  width: 524px;
+  height: 632px;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.VideoThumbnail {
+  width: 524px;
+  height: 632px;
+  border-radius: 8px;
+  object-fit: cover;
 }
