--- a/src/styles/founder/founder-home.module.css
+++ b/src/styles/founder/founder-home.module.css
@@ -12,8 +12,8 @@
   flex-direction: column;
   width: 1071px;
   height: 856px;
-  border-radius: 10px;
-  background-color: rgb(244, 244, 244);
+  border-radius: 8px;
+  background-color: #f5f6f9;
   margin-top: 80px;
   padding: 20px;
 }
@@ -21,25 +21,25 @@
 .Title {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 12px;
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 600;
   text-align: center;
 }
 
 .IntervieweeContainer {
   display: flex;
-  margin-top: 10px;
   flex-wrap: wrap;
-  margin-left: 55px;
-  gap: 40px;
+  margin-left: 30px;
+  gap: 35px;
 }
 
 .SubTitle {
-  font-size: 21px;
-  font-weight: bold;
-  margin-bottom: 20px;
-  margin-top: 10px;
-  margin-left: 55px;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 32px;
+  margin-bottom: 10px;
+  margin-left: 30px;
   align-self: flex-start;
+  color: #000000e0;
 }
