--- a/src/styles/interviewee/IntervieweeBox.module.css
+++ b/src/styles/interviewee/IntervieweeBox.module.css
@@ -1,22 +1,34 @@
 .FounderBoxWrap {
-  width: 280px;
-  height: 220px;
-  border-radius: 5%;
+  width: 300px;
+  height: 236px;
+  border-radius: 8px;
   background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 5px;
+  position: relative;
 }
 
 .DefaultTime {
+  position: absolute;
   width: 50px;
   height: 30px;
   color: white;
   text-align: center;
   font-size: 15px;
-  background-color: rgb(39, 136, 220);
-  border-radius: 5px;
-  margin-left: 230px;
+  background-color: #1677ff;
+  border-radius: 4px 4px 0px 4px;
+  right: -8px;
+  top: 10px;
   padding-top: 6px;
+}
+
+.SmallBox {
+  background-color: #1677ff;
+  width: 8px;
+  height: 6px;
+  position: absolute;
+  top: 40px;
+  right: -8px;
 }
 
 .InfoWrap1 {
@@ -25,29 +37,32 @@
   align-items: center;
   justify-content: flex-start;
   margin-left: 25px;
+  margin-top: 25px;
 }
 
 .IntervieweeImg {
-  width: 45px;
-  height: 45px;
+  width: 38px;
+  height: 38px;
   background-color: rgb(186, 186, 186);
   border-radius: 50%;
   display: flex;
 }
 
 .IntervieweeImg img {
-  width: 45px;
-  height: 45px;
+  width: 38px;
+  height: 38px;
   border-radius: 50%;
 }
 
 .IntervieweeName {
   margin-left: 20px;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 .IntervieweeJob {
   margin-left: 20px;
-  font-size: 13px;
+  font-size: 14px;
 }
 
 .InfoWrap2 {
@@ -60,24 +75,25 @@
 
 .IntervieweeInfo {
   text-align: left;
-  margin-bottom: 60px;
-  font-size: 13px;
+  margin-bottom: 70px;
+  font-size: 14px;
 }
 
 .InterviewButton {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 220px;
-  height: 30px;
-  border-color: #b7b7b7;
+  width: 250px;
+  height: 32px;
+  border-color: #d9d9d9;
   border-width: 1px;
   border-style: solid;
-  border-radius: 5px;
+  border-radius: 1px;
   text-align: center;
-  font-size: 13px;
+  font-size: 14px;
+  padding: 5px, 74.06px, 5px, 74.05px;
 }
 
 .InterviewButton:hover {
-  background-color: #9f9f9f;
+  background-color: #c5c5c5;
 }
