feat: #11 인터뷰 생성 페이지 UI 완료

--- a/src/styles/founder/StepBar.module.css
+++ b/src/styles/founder/StepBar.module.css
@@ -16,7 +16,7 @@
 }
 
 .Step.Completed {
-  background-color: #2a4ecd;
+  background-color: #1677ff;
   color: white;
 }
 
@@ -37,7 +37,7 @@
 }
 
 .StepLine.Completed {
-  background-color: #2a4ecd;
+  background-color: #1677ff;
 }
 
 .LabelContainer {
