--- a/src/styles/founder/create-interview.module.css
+++ b/src/styles/founder/create-interview.module.css
@@ -29,7 +29,7 @@
   border-radius: 10px;
   margin-left: 60px;
   width: 701px;
-  height: 1330px;
+  height: 1210px;
   padding: 45px;
 }
 
@@ -40,19 +40,31 @@
   margin-bottom: 10px;
 }
 
+.SubTitle2 {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
 .InputBox {
-  margin-bottom: 30px;
+  margin-bottom: 25px;
+  margin-left: 9px;
 }
 
 .Input1 {
   width: 600px;
-  height: 35px;
+  height: 32px;
   outline: none;
   padding: 10px;
   border-color: #c3c3c3;
   border-width: 1px;
   border-style: solid;
   border-radius: 8px;
+}
+
+.Input1::placeholder {
+  font-size: 14px;
+  color: #00000040;
 }
 
 .Input2 {
@@ -69,6 +81,8 @@
 
 .Input2::placeholder {
   text-align: right;
+  font-size: 15px;
+  color: #000000e0;
 }
 
 .Input3 {
@@ -85,13 +99,18 @@
 
 .Title {
   margin-left: 6px;
-  color: rgb(98, 98, 98);
-  font-size: 15px;
+  color: #000000e0;
+  font-size: 14px;
 }
 
 .Title2 {
-  color: rgb(98, 98, 98);
-  font-size: 15px;
+  color: #000000e0;
+  font-size: 14px;
+  margin-bottom: 15px;
+}
+
+.Text1 {
+  color: #00000040;
   margin-bottom: 10px;
 }
 
@@ -125,16 +144,20 @@
 
 .CategoryLabel {
   color: rgb(98, 98, 98);
-  font-size: 15px;
+  font-size: 17px;
 }
 
 .Category {
   margin-right: 5px;
+  color: #000000e0;
+  font-size: 14px;
 }
 
 .Category1 {
   margin-right: 5px;
   margin-left: 15px;
+  color: #000000e0;
+  font-size: 14px;
 }
 
 .BlueText {
@@ -147,6 +170,23 @@
 
 .Content {
   padding-left: 40px;
+}
+
+.Question {
+  width: 596px;
+  height: 90px;
+  border-color: #e2e2e2;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 8px;
+  margin-bottom: 15px;
+  padding: 10px;
+}
+
+.Question::placeholder {
+  color: #d0d0d0;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 /* ImageUpload.css*/
@@ -174,7 +214,7 @@
   max-width: 310px;
   text-align: center;
   font-weight: 600;
-  font-size: 28px;
+  font-size: 30px;
   line-height: 35px;
   margin-bottom: 10px;
 }
