--- a/src/styles/founder/founder-home.module.css
+++ b/src/styles/founder/founder-home.module.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   width: 1071px;
-  height: 856px;
+  height: 910px;
   border-radius: 8px;
   background-color: #f5f6f9;
   margin-top: 80px;
@@ -38,8 +38,9 @@
   font-size: 24px;
   font-weight: 600;
   line-height: 32px;
-  margin-bottom: 10px;
-  margin-left: 30px;
+  margin-bottom: 25px;
+  margin-top: 20px;
+  margin-left: 32px;
   align-self: flex-start;
   color: #000000e0;
 }
