--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -95,3 +95,43 @@ input::placeholder {
   width: 38%;
   justify-content: space-between;
 }
+
+.socialLogin {
+  display: flex;
+  justify-content: space-between;
+}
+
+.socialLogin button {
+  border: none;
+  background-color: white;
+  cursor: pointer;
+  margin: 30px;
+}
+
+.socialLogin button img {
+  width: 100%;
+  height: 100%;
+}
+
+.horizonLine {
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid #a4a4a4;
+  line-height: 0.1em;
+  margin: 30px;
+}
+
+.horizonLineText {
+  background-color: white;
+  color: #a4a4a4;
+  padding: 0 10px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.subtext {
+  color: #999999;
+  font-size: 12px;
+  font-weight: 350;
+  text-align: center;
+}
