--- a/src/styles/signup.module.css
+++ b/src/styles/signup.module.css
@@ -1,14 +1,21 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
   width: 100vw;
+  height: 100vh;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 50px 1fr;
+  grid-template-areas:
+    'header header'
+    'img content';
 }
 
-.body {
-  display: grid;
+.header {
+  grid-area: header;
+}
+
+.img {
+  grid-area: img;
   width: 100%;
-  grid-template-columns: 1fr 1fr;
 }
 
 .img img {
@@ -17,12 +24,8 @@
 }
 
 .content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding-left: 10%;
-  padding-right: 10%;
+  grid-area: content;
+  padding: 100px;
 }
 
 .main {
@@ -241,7 +244,7 @@ input::placeholder {
   align-items: center;
   cursor: pointer;
   position: relative;
-  margin-bottom: 70px;
+  margin: 0 auto 70px auto;
 }
 
 .profileImage {
@@ -277,4 +280,19 @@ input::placeholder {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.step2Text {
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+  color: #939393;
+}
+
+.step2Text a {
+  font-size: 20px;
+  font-weight: 700;
+  text-decoration-line: underline;
+  color: black;
+  cursor: pointer;
 }
