--- a/src/styles/signup.module.css
+++ b/src/styles/signup.module.css
@@ -1,14 +1,21 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
   width: 100vw;
+  height: 100vh;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 50px 1fr;
+  grid-template-areas:
+    'header header'
+    'img content';
 }
 
-.body {
-  display: grid;
+.header {
+  grid-area: header;
+}
+
+.img {
+  grid-area: img;
   width: 100%;
-  grid-template-columns: 1fr 1fr;
 }
 
 .img img {
@@ -17,12 +24,8 @@
 }
 
 .content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding-left: 10%;
-  padding-right: 10%;
+  grid-area: content;
+  padding: 100px;
 }
 
 .main {
@@ -82,8 +85,10 @@ input::placeholder {
   gap: 2%;
 }
 
-.te {
+.masking {
   font-size: 30px;
+  display: flex;
+  align-items: center;
 }
 
 .rolecontainer {
@@ -205,5 +210,89 @@ input::placeholder {
   border: none;
   width: 250px;
   height: 65px;
+  cursor: pointer;
+}
+
+.roleButton {
+  background: #ffffff;
+  border: 1px solid #cfcfcf;
+  border-radius: 8px;
+  width: Fixed (160px);
+  height: 60px;
+  padding: 14px 36px 14px 36px;
+  margin-right: 20px;
+  color: #6c6c6c;
+  font-size: 25px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+/*프로필 이미지 스타일 */
+.profileUploadContainer {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.profileImageWrapper {
+  width: 150px;
+  height: 150px;
+  border: none;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+  margin: 0 auto 70px auto;
+}
+
+.profileImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.defaultProfileImage {
+  width: 100%;
+  height: 100%;
+  background-color: #e0e0e0;
+  border-radius: 50%;
+}
+
+.fileInput {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.bigbox {
+  border: 1px solid #2a4ecd;
+  border-radius: 8px;
+  width: 100%;
+  height: 40%;
+  margin-bottom: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.step2Text {
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+  color: #939393;
+}
+
+.step2Text a {
+  font-size: 20px;
+  font-weight: 700;
+  text-decoration-line: underline;
+  color: black;
   cursor: pointer;
 }
