--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -53,9 +53,13 @@
 .input_group input {
   border: none;
   padding-left: 18px;
-  font-size: 14px;
+  font-size: 16px;
   outline: none;
   flex-grow: 1;
+}
+
+.input_group input::placeholder {
+  font-size: 16px;
 }
 
 .input_group button {
@@ -211,7 +215,7 @@
 
 .container_page4 {
   display: grid;
-  grid-template-columns: 262.23px 262.23px 262.23px;
+  grid-template-columns: 263.23px 263.23px 263.23px;
   grid-template-rows: 10px 313.33px;
   padding-top: 30px;
   padding-bottom: 240px;
@@ -223,6 +227,14 @@
 .container_page4_price {
   text-align: center;
   font-size: 20px;
+}
+
+.container_page4_price button {
+  border: none;
+  background-color: white;
+  text-align: center;
+  font-size: 20px;
+  padding-bottom: 14px;
 }
 
 .container_page4_price h3 {
@@ -240,10 +252,11 @@
 .container_page4_box {
   background-color: #f5f5f5;
   border-radius: 8px;
-  width: 262.23px;
+  width: 263.23px;
   height: 313.33px;
   box-shadow: 0px 0px 4px 4px rgb(219, 217, 217);
   margin: 0 auto;
+  padding: 0;
 }
 
 .container_page4_title {
@@ -302,6 +315,45 @@
   padding-top: 14px;
   /* 왜 margin이랑 padding적용 안되나? <- 글자가 h3으로 쓰여있었기 때문, h3면 왜 적요안되나?*/
   font-size: 12px;
+}
+
+.container_page4_box1_cliked {
+  background-color: white;
+  border-radius: 8px;
+  width: 352px;
+  height: 419px;
+  box-shadow: 0px 0px 4px 4px rgb(219, 217, 217);
+  margin: 0 auto;
+  padding-top: 40px;
+  position: relative;
+  bottom: 52px;
+  right: 50px;
+}
+
+.container_page4_box2_cliked {
+  background-color: white;
+  border-radius: 8px;
+  width: 352px;
+  height: 419px;
+  box-shadow: 0px 0px 4px 4px rgb(219, 217, 217);
+  margin: 0 auto;
+  padding-top: 40px;
+  position: relative;
+  bottom: 52px;
+  right: 50px;
+}
+
+.container_page4_box3_cliked {
+  background-color: white;
+  border-radius: 8px;
+  width: 352px;
+  height: 419px;
+  box-shadow: 0px 0px 4px 4px rgb(219, 217, 217);
+  margin: 0 auto;
+  padding-top: 40px;
+  position: relative;
+  bottom: 52px;
+  right: 50px;
 }
 
 /* page5 */
@@ -366,6 +418,70 @@
   line-height: 146%;
 }
 
+.page6_input_group {
+  display: flex;
+  padding-top: 70px;
+}
+
+.page6_input_info_group {
+  display: grid;
+  grid-template-columns: 100px 600px;
+  grid-template-rows: 60px 60px 60px;
+  justify-content: center;
+  padding-left: 200px;
+  row-gap: 30px;
+  column-gap: 14px;
+}
+
+/* .page6_input_title {
+  padding-top: 30px;
+} */
+
+.page6_input_info input {
+  width: 400px;
+  height: 48px;
+  border: none;
+  border-radius: 6px;
+  outline: none;
+}
+
+.page6_input_info input::placeholder {
+  font-size: 16px;
+  padding-left: 20px;
+}
+
+.page6_input_inquiry_group {
+  padding-left: 0px;
+}
+
+.page6_input_checkbox_group {
+  display: flex;
+}
+
+.page6_input_checkbox2 {
+  padding-left: 30px;
+}
+
+.page6_inqury_bar {
+  background-color: black;
+  width: 180px;
+  height: 1.4px;
+  margin-top: 36px;
+}
+
+.page6_inqury_title {
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
+
+.page6_inqury_input input {
+  width: 500px;
+  height: 100px;
+  border: none;
+  border-radius: 6px;
+  outline: none;
+}
+
 /* icon */
 .icon_page2 {
   text-align: center;
@@ -385,6 +501,20 @@
   padding-bottom: 6px;
 }
 
+.page6_button {
+  padding-top: 70px;
+  text-align: center;
+}
+
+.page6_button button {
+  background-color: #2a4ecd;
+  border: none;
+  width: 450px;
+  height: 57px;
+  border-radius: 6px;
+  color: white;
+  font-size: 16px;
+}
 /* 마진, 패딩 관계 확인 - title은 padding, subtitle은 margin why??
 input 테두리 완벽하게 지우기 */
 
