feat: #9 #14 mock data로 변경

--- a/src/styles/founder/manage-interview.module.css
+++ b/src/styles/founder/manage-interview.module.css
@@ -35,6 +35,8 @@
   flex-direction: column;
   align-items: center;
   cursor: pointer;
+  text-decoration: none;
+  color: inherit;
 }
 
 .topBox {
