--- a/src/styles/founder/manage.module.css
+++ b/src/styles/founder/manage.module.css
@@ -8,6 +8,17 @@
   gap: 65px;
 }
 
+.nullContainer {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: black;
+  font-size: 18px;
+}
+
 .swiper {
   display: flex;
   flex-direction: column;
@@ -42,6 +53,15 @@
   height: 178.716px;
   border-radius: 8px;
   background: #151414;
+}
+
+.nullIntervieweeBox {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
 }
 
 /*IntervieweeBox*/
