feat: #14 데이터 들어오기 전, loader, 데이터 없을 때, 메시지 뜨도록

--- a/src/styles/founder/manage.module.css
+++ b/src/styles/founder/manage.module.css
@@ -31,6 +31,19 @@
   height: 100%;
 }
 
+.interviewBox {
+  display: flex;
+  flex-direction: column;
+}
+
+.prevDirection,
+.nextDirection {
+  display: flex;
+  justify-content: center;
+  width: 468.319px;
+  cursor: pointer;
+}
+
 .intervieweeBox {
   width: 870px;
   height: 408px;
