--- a/src/styles/founder/calendar.module.css
+++ b/src/styles/founder/calendar.module.css
@@ -68,6 +68,11 @@
   border-radius: 6px 0px 0px 6px;
   border-right: transparent;
   color: rgba(0, 0, 0, 0.88);
+  &:hover {
+    border: 1px solid #1677ff;
+    border-right: transparent;
+    color: #1677ff;
+  }
 }
 
 .clickedMonth {
@@ -81,6 +86,11 @@
   border-radius: 0px 6px 6px 0px;
   border-left: transparent;
   color: rgba(0, 0, 0, 0.88);
+  &:hover {
+    border: 1px solid #1677ff;
+    border-left: transparent;
+    color: #1677ff;
+  }
 }
 
 .clickedYear {
