--- a/src/styles/founder/manage.module.css
+++ b/src/styles/founder/manage.module.css
@@ -1,10 +1,16 @@
 .container {
   width: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 70px 0 115px 0;
+}
+
+.subContainer {
+  display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 70px 0 115px 0;
   gap: 65px;
 }
 
@@ -75,6 +81,56 @@
   align-items: center;
   justify-content: center;
   color: black;
+}
+
+.buttonBox {
+  font-size: 15px;
+  font-weight: 600;
+  color: #707070;
+  display: flex;
+  flex-direction: row;
+}
+
+.buttons {
+  width: 200px;
+  height: 50px;
+  border: 1px solid #b3b3b3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.leftBtn {
+  border-radius: 10px 0px 0px 10px;
+  border-right: transparent;
+  &:hover {
+    border: 1px solid #2a4ecd;
+    color: #2a4ecd;
+    border-right: transparent;
+  }
+}
+
+.rightBtn {
+  border-radius: 0px 10px 10px 0px;
+  border-left: 1px solid #2a4ecd;
+  &:hover {
+    border: 1px solid #2a4ecd;
+    color: #2a4ecd;
+  }
+}
+
+.clickedRightBtn {
+  border-radius: 0px 10px 10px 0px;
+  border: 1px solid #2a4ecd;
+  color: #2a4ecd;
+}
+
+.clickedLeftBtn {
+  border-radius: 10px 0px 0px 10px;
+  border: 1px solid #2a4ecd;
+  border-right: transparent;
+  color: #2a4ecd;
 }
 
 /*IntervieweeBox*/
