--- a/src/styles/founder/manage-interviewee.module.css
+++ b/src/styles/founder/manage-interviewee.module.css
@@ -38,6 +38,17 @@
   border-right: 1px solid white;
 }
 
+.waitingContainer {
+  display: flex;
+  width: 100%;
+  height: calc(100vh - 267px);
+  justify-content: center;
+  align-items: center;
+  color: black;
+  font-size: 18px;
+  margin-bottom: -115px;
+}
+
 /*IntervieweeBox*/
 .intervieweeBoxContainer {
   width: 100%;
