--- a/src/styles/founder/manage.module.css
+++ b/src/styles/founder/manage.module.css
@@ -84,16 +84,17 @@
 }
 
 .buttonBox {
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 600;
   color: #707070;
   display: flex;
   flex-direction: row;
+  margin-bottom: 5px;
 }
 
 .buttons {
-  width: 200px;
-  height: 50px;
+  width: 180px;
+  height: 43px;
   border: 1px solid #b3b3b3;
   display: flex;
   align-items: center;
