--- a/src/styles/founder/manage-interviewee.module.css
+++ b/src/styles/founder/manage-interviewee.module.css
@@ -10,10 +10,31 @@
   font-size: 30px;
   font-weight: 600;
   height: 81px;
+  display: flex;
+  align-items: center;
 }
 
 .box {
   width: 1327px;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.button {
+  width: 221px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #2a4ecd;
+  color: white;
+  font-size: 16px;
+  font-weight: 400;
+  border-radius: 8px;
+  box-shadow: 0px 2px 0px 0px rgba(5, 145, 255, 0.1);
+  margin-bottom: 26px;
+  text-decoration: none;
 }
 
 .headerBox {
