--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -6,7 +6,12 @@
   background-color: #ffffffff;
   box-shadow: 0px 4px 4px 0px #0000001a;
   width: 100%;
-  height: 100%;
+  height: 46px;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .logo {
